# terminal-data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  check_tickers.py  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  terminal_ui_architecture_prd.md  test.ipynb  test_api.py  test_np_serialize.py  test_output.txt
.agent/workflows/: lint.md  test.md
.claude/: launch.json  settings.local.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  post-start.sh
.github/workflows/: build_docker.yml  ci.yml  docker-publish.yml  download_bars.yml  download_bars_india.yml  download_bars_us.yml  download_compliance.yaml  download_fundamentals.yaml  download_ms.yaml  download_nse_symbol_industry.yaml  refresh_candles_india.yaml  refresh_symbol.yaml  scanner_build.yaml
data/: scanner.parquet
data/scanner/: columns.parquet  symbols.parquet
database/revisions/: 00b824ad6fdb_manual_baseline.py  a793cd09e7a1_initial_terminal_migration.py
docker/: docker-compose-task.yaml
docs/: alerts.md  alerts_engine.md  architecture.md  async-sqlalchemy-migration.md  broker-framework.md  candle_store.md  chrome-extension-conversion.md  design-system.md  improvements-batch-1.md  production-hardening.md  spa.md  state-management-refactor.md  watchlist-screener-sections.md
migrations/: env.py
migrations/versions/: 60c65a01449b_refactor_init.py
modules/alerts/: alert_manager.py  dispatcher_queue.py  engine.py  evaluator.py  models.py  provider.py  store.py  worker.py
modules/api/: data.py  deps.py  main.py  models.py  ws.py
modules/ezscan/: main.py
modules/scanner/: data.py  main.py  ws.py
modules/screener/: main.py
notebook/: base.ipynb  download_industry.ipynb  download_nse_industry.ipynb  download_symbols.ipynb  indicator_test.ipynb  scanner.ipynb
old/: main.py
old/utils/: compliant.py  fundamentals.py  industry.py  rating.py  watchlist.py
provider/tradingview/: quote_streamer.py
scripts/: refresh_tv_fields.py  test_screener.py
src/: main.py
src/api/: __init__.py  base.py  config.py  deps.py  symbols.py
src/terminal/: __init__.py  alembic.ini  api.py  boot.py  cli.py  config.py  dependencies.py  enums.py  log_config.py  logging.py  main.py  middleware.py  models.py  proxy.py
src/web/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_ohlc_store.py
tests/alerts/: test_alerts_api.py  test_drawing.py  test_notifications_api.py
tests/api/: test_auth.py  test_broker.py  test_broker_kite.py  test_candles.py  test_charts.py  test_integration_symbols.py  test_lists.py  test_market_data.py  test_market_feed.py  test_proxy.py  test_symbols.py
tests/auth/: test_auth_service.py
tests/candles/: test_feed.py  test_service.py  test_upstox.py
tests/column/: test_column_api.py
tests/condition/: test_condition_api.py
tests/database/: test_connection.py
tests/formula/: test_formula.py
tests/lists/: test_list_service.py  test_system_lists.py
tests/market_data/: test_manager.py  (+1 more)
utils/: bucket.py  comparitive.py  compliant.py  fundamentals.py  industry.py  pandas_utils.py  price_volume_action.py  rating.py  scanner.py  technical.py  tradingview.py  watchlist.py
(+341 files in other folders)
