[project]
name = "terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.128.8",
    "httpx>=0.28.1",
    "oci>=2.167.1",
    "ocifs>=1.3.4",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.33",
    "uvicorn[standard]>=0.40.0",
]



[tool.hatch.build.targets.wheel]
packages = ["src/internal", "src/api", "src/external"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

