[project]
name = "terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.128.8",
    "httpx>=0.28.1",
    "oci>=2.167.1",
    "ocifs>=1.3.4",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.33",
    "uvicorn[standard]>=0.40.0",
    "cloudscraper>=1.2.71",
    "numpy>=2.4.2",
    "pyarrow>=23.0.0",
    "fastparquet>=2025.12.0",
    "pandas>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
]



[tool.hatch.build.targets.wheel]
packages = ["src/terminal"]

[project.scripts]
terminal = "terminal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.1",
]


[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:circuitbreaker",
]
